# SBG-Prototype

./: .gitignore
Client/: package.json
Client/deploy/js/: game.js
Client/public/js/game/: main.js
Client/src/game/: main.js
Client/temp/: phaser.js
Client/views/: layout.jade
ClientOld/: package.json
ClientOld/deploy/js/: game.js
ClientOld/temp/: index.html  websocket.js
Server/: CMakeLists.txt  Packet.cpp  Packet.h  Server.cpp  Server.h  Server.sln
Server/Server/: Packet.cpp  Packet.h  PlayerSession.cpp  PlayerSession.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters
ServerOld/Server/: PlayerSession.cpp  PlayerSession.h
